Networking/Service Mesh/applications/lab/istio-files/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
spec:
  servers:
    - hosts:
        - 'frontend-istio-USERID.apps.DOMAIN'
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    istio: ingressgateway
