Networking/Service Mesh/applications/lab/istio-files/destination-rule-backend-v1-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend
spec:
  host: backend.USERID.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - name: v1
    labels:
      app: backend
      version: v1
  - name: v2
    labels:
      app: backend
      version: v2
