Networking/Service Mesh/applications/lab/istio-files/destination-rule-frontend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend.USERID.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
