Networking/Service Mesh/applications/lab/istio-files/service-entry-httpbin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin
spec:
  hosts:
  - httpbin.org
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
# mode: ALLOW_ANY to mode: REGISTRY_ONLY
