Networking/Service Mesh/applications/lab/istio-files/virtual-service-backend-v1-v2-50-50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
  - backend.USERID.svc.cluster.local
  http:
  - route:
    - destination:
        host: backend.USERID.svc.cluster.local
        subset: v1
      weight: 50
    - destination:
        host: backend.USERID.svc.cluster.local
        subset: v2
      weight: 50
