Networking/Service Mesh/applications/lab/istio-files/virtual-service-backend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
  - backend.USERID.svc.cluster.local
  http:
  - route:
    - destination:
        host: backend.USERID.svc.cluster.local
