Networking/Service Mesh/applications/lab/istio-files/virtual-service-frontend-header-to-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
    - frontend-istio-USERID.apps.DOMAIN
  gateways:
    - USERID/frontend-gateway
  http:
    - match:
        - headers:
            User-Agent:
              prefix: curl
      route:
        - destination:
            host: frontend.USERID.svc.cluster.local
            subset: v1
          weight: 100
    - route:
        - destination:
            host: frontend.USERID.svc.cluster.local
            subset: v2
          weight: 100
